Update title to include 'BETA' in calculator.html

--- a/beta/calculator.html
+++ b/beta/calculator.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>후추 | 온투업(P2P) 담보대출 계산기</title>
+  <title>후추 | 온투업(P2P) 담보대출 계산기(BETA)</title>
   <meta name="description" content="개인정보 수집 없이, 실제 사례 기반 계산으로 온투업 담보대출 가능성을 가늠해보세요.">
   <link rel="stylesheet" href="/assets/styles.css?v=20251114-calc-only"/>
   <script type="module" src="/assets/calculator.js?v=20251114-calc-only"></script>
