--- a/beta/index.html
+++ b/beta/index.html
@@ -3,96 +3,75 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>후추 | 온투업(P2P) 대출 통계 (베타)</title>
-  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 자료를 기반으로 온투업 담보대출 통계를 시각화합니다.">
-  <link rel="stylesheet" href="/assets/styles.css?v=20251114-calc-only"/>
-  <!-- daily-users / footer 연도 갱신 때문에 calculator.js 재사용 -->
-  <script type="module" src="/assets/calculator.js?v=20251114-calc-only"></script>
+  <title>후추 | 온투업(P2P) 담보대출 통계 (베타)</title>
+  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로 온투업(P2P) 담보대출 통계를 요약해 보여줍니다.">
+  <link rel="stylesheet" href="/assets/styles.css?v=20251116-beta-home"/>
+  <script type="module" src="/assets/home-beta.js?v=20251116-beta-home"></script>
 </head>
 <body>
 
+  <!-- Header (로고만 재사용) -->
   <header class="huchu-header" role="banner">
     <div class="huchu-header__inner">
-      <a href="/beta/" class="huchu-logo" aria-label="후추 Huchu 홈">
+      <a href="/beta/" class="huchu-logo" aria-label="후추 Huchu 홈 (베타)">
         <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고"/>
         <span class="logo-fallback">
           <span class="logo-mark">%</span>
           <span class="logo-text">후추 Huchu</span>
         </span>
       </a>
-
-      <nav class="huchu-nav" aria-label="주요 메뉴">
-        <a href="/beta/" class="huchu-nav__link huchu-nav__link--active">대출통계(베타)</a>
-        <a href="/beta/calculator.html" class="huchu-nav__link">대출계산기</a>
-        <a href="/beta/products/" class="huchu-nav__link">대출상품 소개</a>
-      </nav>
     </div>
   </header>
 
-  <!-- 상단 통계: 기존 구조 그대로 재사용 -->
-  <section class="top-stats" aria-label="금일 이용자수">
-    <div class="stat-card">
-      <div class="stat-label">
-        <span class="stat-dot"></span>금일 이용자수
-      </div>
-      <div class="stat-value">
-        <span id="todayUsersCount" class="num" aria-live="polite">0</span>
-        <span class="suffix">명</span>
-      </div>
-    </div>
-    <div class="type-chip-wrap">
-      <div class="type-chips">
-        <div class="type-chip"><span class="label">아파트</span><span id="aptCount" class="val">0</span></div>
-        <div class="type-chip"><span class="label">다세대/연립</span><span id="multiCount" class="val">0</span></div>
-        <div class="type-chip"><span class="label">단독/다가구</span><span id="houseCount" class="val">0</span></div>
-        <div class="type-chip"><span class="label">토지/임야</span><span id="landCount" class="val">0</span></div>
-      </div>
-    </div>
-  </section>
-
-  <main class="container" aria-label="온투업(P2P) 대출 통계 요약">
+  <main class="container" aria-label="온투업(P2P) 담보대출 통계">
     <h1>온투업(P2P) 담보대출 통계 (베타)</h1>
     <p class="subtitle">
-      온라인투자연계금융업 중앙기록관리기관 공개 자료를 바탕으로,<br/>
-      온투업 담보대출 시장의 규모와 금리, 상품 구성을 한눈에 볼 수 있도록 준비 중입니다.
+      온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로,<br/>
+      월별 온투업 담보대출 현황을 한눈에 볼 수 있게 정리했습니다.
     </p>
 
-    <!-- 여기 아래는 일단 레이아웃만 잡아두고,
-         나중에 실제 통계/그래프/표를 붙이면 됨 -->
-
-    <section class="step">
-      <label class="steplabel no-badge-before">1. 월별 취급액 추이 (준비 중)</label>
-      <p class="info">
-        월별 온투업 담보대출 취급액을 그래프로 보여줄 예정입니다.<br/>
-        (중앙기록관리기관 공개 자료를 정리하는 중입니다.)
-      </p>
-    </section>
-
-    <section class="step">
-      <label class="steplabel no-badge-before">2. 상품 유형별 비중 (준비 중)</label>
-      <p class="info">
-        아파트 담보, 빌라/다세대, 토지/임야 등 담보 유형별 비중과 평균 금리 정보를 제공할 예정입니다.
-      </p>
-    </section>
-
-    <section class="step">
-      <label class="steplabel no-badge-before">3. 후추 계산기와의 연계</label>
-      <p class="info">
-        실제 온투업 사례 기준 통계를 바탕으로, <strong>후추 온투업 담보대출 계산기</strong>의 한도·금리 가이드가 개선될 예정입니다.<br/>
-        아래 버튼을 눌러 베타 계산기를 이용해 보세요.
-      </p>
-      <a href="/beta/calculator.html">
-        <button type="button">베타 계산기 열기</button>
+    <!-- 상단 메뉴(칩 형태 네비게이션) -->
+    <div class="chip-row" style="margin-bottom:16px;">
+      <a href="/beta/" class="chip" style="text-decoration:none;">
+        <span class="label">통계 요약</span>
+        <span class="val">현재 화면</span>
       </a>
+      <a href="/beta/calculator.html" class="chip" style="text-decoration:none;">
+        <span class="label">담보대출 계산기</span>
+        <span class="val">한도·금리 가늠</span>
+      </a>
+      <a href="/beta/products.html" class="chip" style="text-decoration:none;">
+        <span class="label">대출상품 안내</span>
+        <span class="val">준비중</span>
+      </a>
+    </div>
+
+    <!-- 온투업 통계 요약 렌더 영역 -->
+    <section id="ontuSummary" aria-label="온투업 중앙기록 통계 요약">
+      <!-- home-beta.js 에서 내용이 채워짐 -->
     </section>
+
+    <!-- 간단 안내 섹션 -->
+    <section class="step" style="margin-top:20px;">
+      <label class="steplabel no-badge-before">이 통계는 어떻게 사용되나요?</label>
+      <p style="margin:8px 0 4px; font-size:14px; color:#4b5563;">
+        후추의 온투업 담보대출 계산기와 상품 안내는, 중앙기록관리기관 자료를 기준으로
+        <strong>실제 시장에서 형성된 한도·금리 구간</strong>을 참고하여 설계됩니다.
+      </p>
+      <p style="margin:4px 0 0; font-size:13px; color:#6b7280;">
+        통계 수치는 참고용이며, 실제 대출 가능 여부와 조건은 각 온투업사의 심사 기준과
+        투자자 모집 상황에 따라 달라질 수 있습니다.
+      </p>
+    </section>
+
   </main>
 
   <footer class="huchu-footer" role="contentinfo">
     <div class="huchu-footer__inner">
       <div class="f-col">
         <p class="f-mission">
-          개인정보 입력 없이, 실제 사례와 공시 자료를 기반으로
-          합리적인 온투업 대출기관 선택을 돕습니다.
+          개인정보 입력 없이, 실제 온투업 사례 기반의 통계·계산으로
+          보다 합리적인 대출 선택을 도와드립니다.
         </p>
       </div>
     </div>
