--- a/beta/index.html
+++ b/beta/index.html
@@ -1,112 +1,193 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>후추 | 온투업(P2P) 담보대출 통계 (베타)</title>
-  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로 온투업(P2P) 담보대출 통계를 요약해 보여줍니다.">
-  <link rel="stylesheet" href="/assets/styles.css?v=20251116-beta-home"/>
-
-  <!-- Chart.js (도넛 차트용) -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>후추 | 온투업(P2P) 대출 통계 (베타)</title>
+  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 통계를 한눈에 정리했습니다.">
+  <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta-home" />
+  <!-- Chart.js (도넛 그래프용) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- 베타 홈 스크립트 -->
-  <script type="module" src="/assets/home-beta.js?v=20251116-beta-home"></script>
+  <!-- 베타 홈 전용 스크립트 -->
+  <script type="module" src="/assets/home-beta.js?v=20251117-beta-home"></script>
 </head>
 <body>
 
-  <!-- Header (로고만) -->
-  <header class="huchu-header" role="banner">
-    <div class="huchu-header__inner">
-      <a href="/beta/" class="huchu-logo" aria-label="후추 Huchu 홈 (베타)">
-        <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고"/>
-        <span class="logo-fallback">
-          <span class="logo-mark">%</span>
-          <span class="logo-text">후추 Huchu</span>
-        </span>
+  <!-- (A) 최상단 헤더: 텍스트 로고 + MENU 버튼 -->
+  <header class="huchu-header beta-header" role="banner">
+    <div class="huchu-header__inner beta-header__inner">
+      <!-- 텍스트 로고 -->
+      <a href="/beta/" class="beta-logo" aria-label="후추 Huchu 홈">
+        <span class="beta-logo__mark">%</span>
+        <span class="beta-logo__text">후추</span>
       </a>
+
+      <!-- MENU 버튼 -->
+      <button type="button" class="beta-menu-toggle" aria-label="메뉴 열기">
+        <span class="beta-menu-toggle__icon">
+          <span></span><span></span><span></span>
+        </span>
+        <span class="beta-menu-toggle__label">MENU</span>
+      </button>
+    </div>
+
+    <!-- 풀스크린 메뉴 오버레이 -->
+    <div class="beta-menu-overlay hide" id="betaMenuOverlay" aria-hidden="true">
+      <div class="beta-menu-overlay__inner">
+        <button type="button" class="beta-menu-close" id="betaMenuClose" aria-label="메뉴 닫기">×</button>
+        <nav class="beta-menu-nav" aria-label="전체 메뉴">
+          <a href="/beta/" class="beta-menu-link">온투업 대출통계</a>
+          <a href="/beta/products.html" class="beta-menu-link">온투업 대출상품정보</a>
+          <a href="/beta/calculator.html" class="beta-menu-link">담보대출 계산기</a>
+          <a href="/beta/about.html" class="beta-menu-link">회사소개</a>
+          <a href="/beta/contact.html" class="beta-menu-link">제휴 및 기타문의</a>
+        </nav>
+      </div>
     </div>
   </header>
 
-  <main class="container" aria-label="온투업(P2P) 담보대출 통계">
-    <h1>온투업(P2P) 담보대출 통계 (베타)</h1>
-    <p class="subtitle">
-      온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로,<br/>
-      월별 온투업 담보대출 현황을 한눈에 볼 수 있게 정리했습니다.
-    </p>
+  <main class="beta-main" aria-label="온투업 담보대출 통계 메인">
+    <div class="beta-inner">
 
-    <!-- 상단 네비게이션 칩 -->
-    <div class="chip-row" style="margin-bottom:12px;">
-      <a href="/beta/" class="chip" style="text-decoration:none;">
-        <span class="label">통계 요약</span>
-        <span class="val">현재 화면</span>
-      </a>
-      <a href="/beta/calculator.html" class="chip" style="text-decoration:none;">
-        <span class="label">담보대출 계산기</span>
-        <span class="val">한도·금리 가늠</span>
-      </a>
-      <a href="/beta/products.html" class="chip" style="text-decoration:none;">
-        <span class="label">대출상품 안내</span>
-        <span class="val">준비중</span>
-      </a>
-    </div>
+      <!-- (B) 히어로 영역: 좌측 캐러셀 / 우측 2×2 카드 -->
+      <section class="beta-hero">
+        <div class="beta-hero-grid">
 
-    <!-- 조회년월 선택 영역 -->
-    <section class="step" style="margin-top:0; margin-bottom:16px;">
-      <label class="steplabel no-badge-before">조회년월</label>
-      <div class="amount-row" style="align-items:center; gap:8px; flex-wrap:wrap;">
-        <div id="monthDisplayLabel" style="font-weight:800; color:#0b2a66;">
-          -
+          <!-- 왼쪽: 배너 캐러셀 -->
+          <section class="beta-hero-banner" aria-label="공지 배너">
+            <div class="beta-hero-banner__slides" id="heroBannerSlides">
+              <!-- 
+                추후 관리자 연동: JS로 슬라이드 목록 렌더링
+                지금은 간단한 안내용 플레이스홀더 1장
+              -->
+              <article class="beta-hero-slide is-active">
+                <div class="beta-hero-slide__bg"></div>
+                <div class="beta-hero-slide__content">
+                  <div class="beta-hero-slide__pill">UPDATE NEWS</div>
+                  <h1 class="beta-hero-slide__title">온투업(P2P) 담보대출 통계 베타 오픈</h1>
+                  <p class="beta-hero-slide__desc">
+                    중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 볼 수 있게 정리했습니다.
+                  </p>
+                  <button type="button" class="beta-hero-slide__btn" disabled>
+                    공지사항 페이지 준비중
+                  </button>
+                </div>
+              </article>
+            </div>
+            <!-- 인디케이터 (추후 다중 슬라이드 시 사용) -->
+            <div class="beta-hero-banner__dots" id="heroBannerDots">
+              <button type="button" class="dot is-active" aria-label="1번 배너"></button>
+              <!-- 관리자에서 여러 장 등록되면 JS로 dot 추가 예정 -->
+            </div>
+          </section>
+
+          <!-- 오른쪽: 2×2 기능 카드 -->
+          <section class="beta-hero-cards" aria-label="주요 기능 바로가기">
+            <div class="beta-hero-cards__grid">
+              <a href="/beta/" class="beta-hero-card">
+                <h2>온투업(P2P) 대출 통계</h2>
+                <p>중앙기록관리기관 공시자료 기반 월별 대출현황</p>
+              </a>
+              <a href="/beta/products.html" class="beta-hero-card">
+                <h2>온투업(P2P) 대출 상품 정보</h2>
+                <p>담보·지분·경락잔금 12개 상품 구조 정리</p>
+              </a>
+              <a href="/beta/calculator.html" class="beta-hero-card">
+                <h2>온투업 담보대출 계산기</h2>
+                <p>개인정보 입력 없이 한도·금리 가늠</p>
+              </a>
+              <a href="https://blog.naver.com/" target="_blank" rel="noopener" class="beta-hero-card beta-hero-card--blog">
+                <div class="beta-hero-card__blog-tag">
+                  <span class="naver-n">N</span>
+                  <span>네이버 블로그</span>
+                </div>
+                <h2>후추 공식블로그</h2>
+                <p>온투업 담보대출 사례와 인사이트</p>
+              </a>
+            </div>
+          </section>
+
         </div>
-        <button
-          id="monthPickerBtn"
-          type="button"
-          class="btn-secondary"
-          style="flex:0 0 auto; width:auto; padding:8px 12px; font-size:13px;"
-        >
-          📅 월 변경
-        </button>
-        <input id="monthPickerInput" type="month" class="hide"/>
-      </div>
-      <p style="margin:6px 0 0; font-size:12px; color:#6b7280;">
-        조회년월을 변경하면, 해당 월 기준으로 입력된 통계를 불러옵니다.
-        아직 입력되지 않은 월은 최근 기준월 데이터가 대신 표시됩니다.
-      </p>
-    </section>
+      </section>
 
-    <!-- 온투업 통계 요약 렌더 영역 -->
-    <section id="ontuSummary" aria-label="온투업 중앙기록 통계 요약">
-      <!-- home-beta.js 에서 내용이 채워짐 -->
-    </section>
+      <!-- (C) 서브 인포 바 -->
+      <section class="beta-subinfo" aria-label="금일 이용자수 및 안내 배너">
+        <div class="beta-subinfo__top">
+          <div class="beta-subinfo__metric">
+            <span class="label">금일 계산기 이용자수</span>
+            <span class="value">
+              <span id="todayUsersCount">0</span><span class="unit">명</span>
+            </span>
+          </div>
+          <!-- 추후 위험영역/적정영역/저위험영역 라벨 추가 가능 영역 -->
+        </div>
+        <div class="beta-subinfo__banner">
+          <!-- 관리자에서 등록한 이미지를 추후 JS로 교체 예정 -->
+          <img
+            src="/assets/banner/subinfo-placeholder.png"
+            alt="온투업 담보대출 관련 안내 배너"
+            loading="lazy"
+            onerror="this.style.display='none';"
+          >
+        </div>
+      </section>
 
-    <!-- 추가 안내 섹션 -->
-    <section class="step" style="margin-top:20px;">
-      <label class="steplabel no-badge-before">이 통계는 어떻게 활용되나요?</label>
-      <p style="margin:8px 0 4px; font-size:14px; color:#4b5563;">
-        후추의 온투업 담보대출 계산기와 상품 안내는, 중앙기록관리기관 자료를 기준으로
-        <strong>실제 시장에서 형성된 한도·금리 구간</strong>을 참고하여 설계됩니다.
-      </p>
-      <p style="margin:4px 0 0; font-size:13px; color:#6b7280;">
-        통계 수치는 참고용이며, 실제 대출 가능 여부와 조건은 각 온투업사의 심사 기준과
-        투자자 모집 상황에 따라 달라질 수 있습니다.
-      </p>
-    </section>
+      <!-- (D) 대출현황 섹션 -->
+      <section class="beta-section" aria-labelledby="loanStatusTitle">
+        <div class="beta-section__header">
+          <div class="beta-section__title-wrap">
+            <span className="icon-dot dot-gold"></span>
+            <h2 id="loanStatusTitle" class="beta-section__title">
+              대출현황
+            </h2>
+          </div>
+          <div class="beta-section__meta" id="loanStatusMonth">
+            <!-- 최근 기준월: YYYY년 MM월 -->
+          </div>
+        </div>
+        <div class="beta-card beta-card--wide" id="ontuLoanStatus">
+          <!-- home-beta.js에서 요약 카드 5개 렌더링 -->
+        </div>
+      </section>
 
+      <!-- (E) 상품유형별 대출잔액 섹션 -->
+      <section class="beta-section" aria-labelledby="productOutstandingTitle">
+        <div class="beta-section__header">
+          <div class="beta-section__title-wrap">
+            <span class="icon-dot dot-blue"></span>
+            <h2 id="productOutstandingTitle" class="beta-section__title">
+              상품유형별 대출잔액
+            </h2>
+          </div>
+        </div>
+        <div class="beta-card beta-card--wide" id="ontuProductSection">
+          <!-- home-beta.js에서 도넛 + 3×2 박스 렌더링 -->
+        </div>
+      </section>
+
+    </div>
   </main>
 
-  <footer class="huchu-footer" role="contentinfo">
-    <div class="huchu-footer__inner">
-      <div class="f-col">
-        <p class="f-mission">
-          개인정보 입력 없이, 실제 온투업 사례 기반의 통계·계산으로
-          보다 합리적인 대출 선택을 도와드립니다.
-        </p>
+  <!-- (F) 푸터 -->
+  <footer class="beta-footer" role="contentinfo">
+    <div class="beta-footer__top">
+      <a href="/beta/about.html">회사소개</a>
+      <a href="/beta/terms.html">서비스이용약관</a>
+      <a href="/beta/privacy.html">개인정보 취급방침</a>
+    </div>
+    <div class="beta-footer__bottom">
+      <div class="beta-footer__brand">
+        <span class="beta-footer__logo-mark">%</span>
+        <span class="beta-footer__logo-text">HUCHU</span>
+      </div>
+      <div class="beta-footer__info">
+        <p>상호 : (예시) 후추랩 | 대표 : 장현성</p>
+        <p>주소 : (예시) 경기도 고양시 일산동구 ○○로 00</p>
+        <p>E-MAIL : huchudb01@gmail.com | 사업자번호 : 000-00-00000</p>
+        <p><span id="copyrightYear">2025</span> © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
 
-  <div class="huchu-footer__bar">
-    <small><span id="copyrightYear">2025</span> © Huchu. All rights reserved.</small>
-  </div>
 </body>
 </html>
