--- a/beta/index.html
+++ b/beta/index.html
@@ -136,7 +136,7 @@
       <section class="beta-section" aria-labelledby="loanStatusTitle">
         <div class="beta-section__header">
           <div class="beta-section__title-wrap">
-            <span className="icon-dot dot-gold"></span>
+            <span class="icon-dot dot-gold"></span>
             <h2 id="loanStatusTitle" class="beta-section__title">
               대출현황
             </h2>
