--- a/beta/index.html
+++ b/beta/index.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>후추 | 온투업(P2P) 담보대출 통계 (베타)</title>
-  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 정리했습니다.">
-  <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta-home" />
-  <!-- Chart.js (도넛 그래프용) -->
+  <meta name="description" content="온라인투자연계금융업 중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 정리한 페이지입니다.">
+
+  <link rel="stylesheet" href="/assets/styles.css?v=20251117-beta" />
+  <!-- Chart.js (도넛 차트용) -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <!-- 베타 홈 전용 스크립트 -->
-  <script type="module" src="/assets/home-beta.js?v=20251117-beta-home"></script>
+  <!-- 베타 전용 JS -->
+  <script type="module" src="/assets/home-beta.js?v=20251117-beta"></script>
 </head>
 <body>
 
-  <!-- (A) 최상단 헤더: 기존 로고 + MENU 드롭다운 -->
+  <!-- 상단 헤더: 로고 + MENU 버튼 -->
   <header class="huchu-header beta-header" role="banner">
     <div class="huchu-header__inner beta-header__inner">
-      <!-- 왼쪽: 기존 후추 로고 -->
-      <a href="/beta/" class="huchu-logo" aria-label="후추 Huchu 홈">
+      <a href="/" class="huchu-logo" aria-label="후추 Huchu 홈">
         <img class="logo-img" src="/assets/logo/huchu-logo.png" alt="후추 로고" />
         <span class="logo-fallback">
           <span class="logo-mark">%</span>
@@ -25,113 +25,81 @@
         </span>
       </a>
 
-      <!-- 오른쪽: MENU 버튼 + 드롭다운 패널 -->
       <div class="beta-menu">
-        <button
-          type="button"
-          class="beta-menu-toggle"
-          id="betaMenuToggle"
-          aria-haspopup="true"
-          aria-expanded="false"
-        >
+        <button id="betaMenuToggle"
+                class="beta-menu-toggle"
+                type="button"
+                aria-haspopup="true"
+                aria-expanded="false">
           <span class="beta-menu-toggle__icon">
             <span></span><span></span><span></span>
           </span>
           <span class="beta-menu-toggle__label">MENU</span>
         </button>
 
-        <nav class="beta-menu-panel hide" id="betaMenuPanel" aria-label="전체 메뉴">
-          <a href="/beta/" class="beta-menu-link">온투업 대출통계</a>
-          <a href="/beta/products.html" class="beta-menu-link">온투업 대출상품정보</a>
-          <a href="/beta/calculator.html" class="beta-menu-link">담보대출 계산기</a>
-          <a href="/beta/about.html" class="beta-menu-link">회사소개</a>
-          <a href="/beta/contact.html" class="beta-menu-link">제휴 및 기타문의</a>
-        </nav>
+        <div id="betaMenuPanel" class="beta-menu-panel hide">
+          <a class="beta-menu-link" href="/beta/">온투업 대출통계</a>
+          <a class="beta-menu-link" href="/products/">온투업 대출상품정보</a>
+          <a class="beta-menu-link" href="/">담보대출 계산기</a>
+          <a class="beta-menu-link" href="/company.html">회사소개</a>
+          <a class="beta-menu-link" href="/contact.html">제휴 및 기타문의</a>
+        </div>
       </div>
     </div>
   </header>
 
-  <main class="beta-main" aria-label="온투업 담보대출 통계 메인">
+  <!-- 메인 -->
+  <main class="beta-main">
     <div class="beta-inner">
 
-      <!-- (B) 히어로 영역 -->
+      <!-- 히어로 영역 -->
       <section class="beta-hero">
         <div class="beta-hero-grid">
 
-          <!-- 왼쪽: 배너 캐러셀 -->
-          <section class="beta-hero-banner" aria-label="공지 배너">
-            <div class="beta-hero-banner__slides" id="heroBannerSlides">
-              <!-- 일단 1장만 (관리자 업로드 영역은 나중에 확장) -->
-              <article class="beta-hero-slide is-active">
-                <div class="beta-hero-slide__content">
-                  <div class="beta-hero-slide__pill">UPDATE NEWS</div>
-                  <h1 class="beta-hero-slide__title">온투업(P2P) 담보대출 통계 베타 오픈</h1>
-                  <p class="beta-hero-slide__desc">
-                    중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 볼 수 있게 정리했습니다.
-                  </p>
-                  <button type="button" class="beta-hero-slide__btn" disabled>
-                    공지사항 페이지 준비중
-                  </button>
-                </div>
+          <!-- 왼쪽: 메인 배너 -->
+          <div class="beta-hero-banner">
+            <div class="beta-hero-banner__slides">
+              <article class="beta-hero-slide">
+                <div class="beta-hero-slide__pill">UPDATE NEWS</div>
+                <h1 class="beta-hero-slide__title">온투업(P2P) 담보대출 통계 베타 오픈</h1>
+                <p class="beta-hero-slide__desc">
+                  중앙기록관리기관 공시자료를 바탕으로, 온투업 담보대출 현황을 한눈에 볼 수 있게 정리했습니다.
+                </p>
+                <button class="beta-hero-slide__btn" type="button">
+                  공지사항 페이지 준비중
+                </button>
               </article>
             </div>
-            <div class="beta-hero-banner__dots" id="heroBannerDots">
-              <button type="button" class="dot is-active" aria-label="1번 배너"></button>
+            <div class="beta-hero-banner__dots">
+              <button class="dot is-active" type="button"></button>
+              <button class="dot" type="button"></button>
+              <button class="dot" type="button"></button>
             </div>
-          </section>
+          </div>
 
-          <!-- 오른쪽: 2×2 카드 + 금일 이용자수 + 아래 이미지 -->
-          <section class="beta-hero-right">
+          <!-- 오른쪽: 2×2 기능 카드 + 금일 이용자수 + 서브 배너 -->
+          <div class="beta-hero-right">
 
-            <!-- 2×2 이미지 카드 -->
-            <div class="beta-hero-cards" aria-label="주요 기능 바로가기">
+            <!-- 2×2 이미지 카드 (일단 정적인 이미지; 나중에 관리자 연동) -->
+            <div class="beta-hero-cards">
               <div class="beta-hero-cards__grid">
-
-                <!-- 1. 온투업 대출 통계 -->
-                <a href="/beta/" class="beta-hero-card beta-hero-card--image-only">
-                  <img
-                    src="/assets/cards/card-stat.png"
-                    alt="온투업(P2P) 대출 통계"
-                    loading="lazy"
-                    onerror="this.style.display='none';"
-                  >
+                <a href="/beta/" class="beta-hero-card">
+                  <img src="/assets/hero-card-stat.png" alt="온투업(P2P) 대출 통계" />
                 </a>
-
-                <!-- 2. 온투업 대출 상품 정보 -->
-                <a href="/beta/products.html" class="beta-hero-card beta-hero-card--image-only">
-                  <img
-                    src="/assets/cards/card-products.png"
-                    alt="온투업(P2P) 대출 상품 정보"
-                    loading="lazy"
-                    onerror="this.style.display='none';"
-                  >
+                <a href="/products/" class="beta-hero-card">
+                  <img src="/assets/hero-card-products.png" alt="온투업(P2P) 대출 상품 정보" />
                 </a>
-
-                <!-- 3. 담보대출 계산기 -->
-                <a href="/beta/calculator.html" class="beta-hero-card beta-hero-card--image-only">
-                  <img
-                    src="/assets/cards/card-calculator.png"
-                    alt="온투업 담보대출 계산기"
-                    loading="lazy"
-                    onerror="this.style.display='none';"
-                  >
+                <a href="/" class="beta-hero-card">
+                  <img src="/assets/hero-card-calculator.png" alt="온투업 전용 담보대출 계산기" />
                 </a>
-
-                <!-- 4. 네이버 블로그 -->
-                <a href="https://blog.naver.com/" target="_blank" rel="noopener" class="beta-hero-card beta-hero-card--image-only">
-                  <img
-                    src="/assets/cards/card-blog.png"
-                    alt="후추 네이버 공식 블로그"
-                    loading="lazy"
-                    onerror="this.style.display='none';"
-                  >
+                <a href="https://blog.naver.com/huchudb" target="_blank" rel="noopener" class="beta-hero-card">
+                  <img src="/assets/hero-card-blog.png" alt="후추 공식 블로그" />
                 </a>
-
               </div>
             </div>
 
-            <!-- 금일 이용자수 + 아래 이미지 (폭 동일) -->
-            <div class="beta-subinfo" aria-label="금일 계산기 이용자수 및 안내">
+            <!-- 금일 이용자수 + 서브 이미지 -->
+            <div class="beta-subinfo">
               <div class="beta-subinfo__metric-row">
                 <div class="beta-subinfo__label">금일 계산기 이용자수</div>
                 <div class="beta-subinfo__value">
@@ -139,60 +107,53 @@
                   <span class="unit">명</span>
                 </div>
               </div>
-
               <div class="beta-subinfo__banner">
-                <img
-                  src="/assets/banner/subinfo-tags.png"
-                  alt="온투업 담보대출 특징 안내"
-                  loading="lazy"
-                  onerror="this.style.display='none';"
-                >
+                <img src="/assets/hero-subinfo-banner.png" alt="개인정보 입력 없이 간편하게 담보대출 가능 여부를 확인해보세요.">
               </div>
             </div>
 
-          </section>
-
+          </div>
         </div>
       </section>
 
-      <!-- (D) 대출현황 섹션 -->
-      <section class="beta-section" aria-labelledby="loanStatusTitle">
+      <!-- 대출현황 섹션 -->
+      <section class="beta-section">
         <div class="beta-section__header">
           <div class="beta-section__title-wrap">
             <span class="icon-dot dot-gold"></span>
-            <h2 id="loanStatusTitle" class="beta-section__title">대출현황</h2>
+            <h2 class="beta-section__title">대출현황</h2>
           </div>
-          <div class="beta-section__meta" id="loanStatusMonth">
-            <!-- 최근 기준월: 2025년 10월 -->
-          </div>
+          <div id="loanStatusMonth" class="beta-section__meta"></div>
         </div>
+
         <div class="beta-card beta-card--wide" id="ontuLoanStatus">
-          <!-- home-beta.js에서 카드 5개 렌더링 -->
+          <!-- JS에서 그리드로 렌더링 -->
         </div>
       </section>
 
-      <!-- (E) 상품유형별 대출잔액 섹션 -->
-      <section class="beta-section" aria-labelledby="productOutstandingTitle">
+      <!-- 상품유형별 대출잔액 섹션 -->
+      <section class="beta-section">
         <div class="beta-section__header">
           <div class="beta-section__title-wrap">
-            <span class="icon-dot dot-blue"></span>
-            <h2 id="productOutstandingTitle" class="beta-section__title">상품유형별 대출잔액</h2>
+            <span class="icon-dot dot-gold"></span>
+            <h2 class="beta-section__title">상품유형별 대출잔액</h2>
           </div>
         </div>
+
         <div class="beta-card beta-card--wide" id="ontuProductSection">
-          <!-- home-beta.js에서 도넛 + 3×2 박스 렌더링 -->
+          <!-- JS에서 도넛 + 3×2 카드로 렌더링 -->
         </div>
       </section>
 
     </div>
   </main>
 
-  <!-- (F) 푸터 -->
+  <!-- 푸터 -->
   <footer class="beta-footer" role="contentinfo">
     <div class="beta-footer__top">
-      <a href="/beta/about.html">회사소개</a>
-      <a href="/beta/terms.html">서비스이용약관</a>
-      <a href="/beta/privacy.html">개인정보 취급방침</a>
+      <a href="/company.html">회사소개</a>
+      <a href="/terms.html">서비스이용약관</a>
+      <a href="/privacy.html">개인정보 취급방침</a>
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
@@ -200,10 +161,10 @@
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
-        <p>상호 : (예시) 후추랩 | 대표 : 장현성</p>
-        <p>주소 : (예시) 경기도 고양시 일산동구 ○○로 00</p>
-        <p>E-MAIL : huchudb01@gmail.com | 사업자번호 : 000-00-00000</p>
-        <p><span id="copyrightYear">2025</span> © HUCHU. ALL RIGHTS RESERVED.</p>
+        <p>상호: (예시) 후추랩 | 대표: 장현성</p>
+        <p>주소: (예시) 경기도 고양시 일산동구 00로 00</p>
+        <p>E-MAIL: huchudb01@gmail.com | 사업자번호: 000-00-00000</p>
+        <p>2025 © HUCHU. ALL RIGHTS RESERVED.</p>
       </div>
     </div>
   </footer>
