--- a/beta/index.html
+++ b/beta/index.html
@@ -12,7 +12,7 @@
   <!-- 베타 전용 JS -->
   <script type="module" src="/assets/home-beta.js?v=20251117-beta"></script>
 </head>
-<body>
+<body class="beta-body">
 
   <!-- 상단 헤더: 로고 + MENU 버튼 -->
   <header class="huchu-header beta-header" role="banner">
